--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "filament/filament": "5.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "owenvoke/blade-fontawesome": "^2.9"
+        "owenvoke/blade-fontawesome": "^2.9",
+        "stechstudio/filament-impersonate": "^4.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
