--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "blade-ui-kit/blade-heroicons": "^2.6",
+        "dutchcodingcompany/filament-developer-logins": "^2.1",
         "filament/filament": "5.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
